# txtx

./: .gitattributes  .gitignore  .template.env  Cargo.toml  PR_DESCRIPTION.md  README.md  bacon.toml  branch-changes.txt  config.toml  deny.toml  funding.json  history.txt  install.sh  justfile  pr-type-null-refactor.md  rust-toolchain  sequence.md  shell.nix  sol.tx  tech-debt-report.md  test.tx  txtx.yml
addons/bitcoin/: CONTRIBUTING.md  Cargo.toml
addons/bitcoin/src/: constants.rs  lib.rs  typing.rs
addons/bitcoin/src/codec/: mod.rs
addons/bitcoin/src/functions/: mod.rs
addons/evm/: ABI_ERROR_COMPARISON.md  CREATE2_DEPLOYMENT.md  Cargo.toml  DEMO_ERROR_STACK.md  ERROR_FIXTURES.md  ERROR_STACK_ARCHITECTURE.md  ERROR_STACK_MIGRATION.md  ERROR_STACK_PRESERVATION.md  ERROR_STACK_SUMMARY.md  FIXTURE_CONSOLIDATION_PLAN.md  FIXTURE_TESTING_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPORTANT_INTEGER_VALUES.md  MIGRATION_STATUS.md  MISSING_ACTIONS_ANALYSIS.md  PLAN_INDEX.md  README.md  REFACTOR_TODO.md  TESTING_GUIDE.md  TESTS_NEEDING_SPECS.md  TEST_ARCHITECTURE.md  TEST_CATALOG_ANALYSIS.md  TEST_COVERAGE_REPORT.md  TEST_HARNESS_DOCUMENTATION.md  TEST_HARNESS_INTERFACE.md  TEST_HARNESS_OUTPUT_ISSUE.md  TEST_HARNESS_SOLUTION.md  TEST_HARNESS_TRACKER.md  TEST_MIGRATION_TRACKER.md  TEST_NAMING_CONVENTION.md  TEST_REFACTORING_SUMMARY.md  UNICODE_SUPPORT.md  build.rs  chain-utils.md  check_migration_status.sh  config.toml  convert_tests.py  convert_tests_v2.py  fix_all_runbooks.py  fix_compilation_errors.py  (+2 more)
addons/evm/docs/: ARCHITECTURE.md  CONSOLIDATED_README.md  DEVELOPMENT.md  FEATURES.md  README.md  TESTING.md
addons/evm/docs/archive/: EMOJI_CLEANUP.md  ERROR_ENUM_MATCHING.md  ERROR_HANDLING.md  ERROR_STACK_MIGRATION.md  FIXTURE_PROJECTS.md  FIXTURE_TESTING_STRATEGY.md  INDEX.md  INLINE_RUNBOOK_EXTRACTION_COMPLETE.md  TEST_AUDIT_RESULTS.md  TEST_COVERAGE_GAPS.md  TEST_CREATION_GUIDE.md  TEST_FIXES_SUMMARY.md  TEST_INFRASTRUCTURE.md  TEST_ISSUES_SUMMARY.md  TEST_MIGRATION_SPECS.md  TEST_QUICK_REFERENCE.md  TEST_WRITING_GUIDELINES.md  V2_FUNCTION_CLEANUP.md
addons/evm/examples/: list_addon_functions.rs
addons/evm/fixtures/: README.md
addons/evm/fixtures/doctor_demo/: README.md  doctor_demo.sh  doctor_with_links_demo.sh  test_doctor.sh  txtx.yml
addons/evm/fixtures/integration/: abi_decode_test.tx  abi_encode_basic.tx  abi_encode_complex.tx  access_list_transaction.tx  batch_deployment.tx  batch_transactions.tx  check_confirmations_deployment.tx  check_confirmations_example.tx  check_confirmations_transfer.tx  eth_transfer_with_test_log.tx  event_logs.tx  factory_deployment.tx  function_selector_test.tx  gas_errors.tx  gas_estimation.tx  insufficient_funds_transfer.tx  large_contract_deployment.tx  nonce_errors.tx  pending_transactions.tx  proxy_deployment.tx  revert_reasons.tx  simple_send_eth_no_confirmations.tx  simple_send_eth_with_env.tx  test_view_function.tx  transaction_cancellation.tx  transaction_cost.tx  transaction_metadata.tx  transaction_replacement.tx  transaction_signing.tx  transaction_simulation.tx  transaction_types.tx  unicode_edge_cases.tx  (+2 more)
addons/evm/src/: constants.rs  errors.rs  errors_demo.rs  functions.rs  lib.rs  typing.rs
addons/evm/test-contracts/: ErrorTestContract.sol  FactoryContract.sol  TypeTestContract.sol
addons/ovm/: Cargo.toml
addons/ovm/examples/: ovm.tx
addons/ovm/src/: constants.rs  functions.rs  lib.rs  typing.rs
addons/solana/: Cargo.toml
addons/solana/src/: constants.rs  functions.rs  lib.rs  typing.rs
addons/sp1/: Cargo.toml
addons/sp1/src/: functions.rs  lib.rs  typing.rs
addons/stacks/: Cargo.toml
addons/stacks/src/: constants.rs  functions.rs  lib.rs  stacks_helpers.rs  typing.rs  utils.rs
addons/svm/: Cargo.toml
addons/svm/core/: Cargo.toml
addons/svm/src/: constants.rs  functions.rs  lib.rs  typing.rs
addons/svm/types/: Cargo.toml
addons/telegram/: Cargo.toml
addons/telegram/src/: lib.rs  send_message.rs  setup_chat.rs
components/txtx-addon-kit/: Cargo.toml
components/txtx-addon-kit/src/: lib.rs  macros.rs
components/txtx-addon-network-bitcoin/: Cargo.toml
components/txtx-addon-network-bitcoin/src/: functions.rs  lib.rs
components/txtx-addon-network-stacks/: Cargo.toml
components/txtx-addon-network-stacks/src/: commands.rs  constants.rs  functions.rs  lib.rs  stacks_helpers.rs  typing.rs
components/txtx-addon-telegram/: Cargo.toml
components/txtx-addon-telegram/src/: lib.rs  send_message.rs  setup_chat.rs
components/txtx-cli/: Cargo.toml  build.rs
components/txtx-cli/src/: main.rs
components/txtx-core/: Cargo.toml
components/txtx-core/src/: constants.rs  lib.rs
components/txtx-ext-ethereum/: Cargo.toml
components/txtx-ext-ethereum/src/: lib.rs
components/txtx-gql/: Cargo.toml
components/txtx-gql/src/: lib.rs  mutation.rs  query.rs  subscription.rs
crates/txtx-addon-kit/: Cargo.toml
crates/txtx-addon-kit/examples/: error_stack_demo.rs
crates/txtx-addon-kit/src/: constants.rs  lib.rs  macros.rs
crates/txtx-cli/: Cargo.toml  build.rs
crates/txtx-cli/benches/: lsp_performance.rs
crates/txtx-cli/examples/: cli_errors_demo.rs  generate_doc_urls.rs  test_doctor_pattern.rs
crates/txtx-cli/src/: macros.rs  main.rs
crates/txtx-cli/tests/: doctor_tests_builder.rs  linter_tests_builder.rs  lsp_tests_builder.rs
crates/txtx-cloud/: Cargo.toml
crates/txtx-cloud/src/: auth.rs  callback.html  lib.rs  login.rs  publish.rs  router.rs  workspace.rs
crates/txtx-core/: Cargo.toml  build.rs
crates/txtx-core/src/: constants.rs  lib.rs
crates/txtx-gql/: Cargo.toml
crates/txtx-gql/src/: lib.rs  mutation.rs  query.rs  subscription.rs
crates/txtx-serve/: Cargo.toml
crates/txtx-serve/src/: lib.rs
crates/txtx-supervisor-ui/: Cargo.toml  build.rs
crates/txtx-supervisor-ui/src/: cloud_relayer.rs  http.rs  lib.rs
crates/txtx-test-utils/: Cargo.toml  README.md
crates/txtx-test-utils/examples/: enhanced_builder_example.rs
crates/txtx-test-utils/src/: addon_registry.rs  lib.rs  simple_validator.rs  test_harness.rs
crates/txtx-test-utils/tests/: test_parser.rs
(+1131 files in other folders)
