[workspace.package]
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/txtx/txtx"
keywords = ["txtx", "smart-contracts", "devops", "secops", "blockchains"]
categories = ["cryptography"]

[workspace]
members = [
    "crates/txtx-cli",
    "crates/txtx-core",
    "crates/txtx-addon-kit",
    "crates/txtx-cloud",
    "crates/txtx-lsp",
    "crates/txtx-serve",
    "addons/bitcoin",
    "addons/evm",
    "addons/ovm",
    "addons/stacks",
    "addons/svm/core",
    "addons/telegram",
    "addons/sp1", 
]
default-members = ["crates/txtx-cli"]
resolver = "2"

[workspace.dependencies]
crossbeam-channel = "0.5.15"
reqwest = { version = "0.11.27", default-features = false, features = [
    "json",
    "rustls-tls",
]}
txtx-core = { path = "crates/txtx-core", default-features = false }
txtx-addon-kit = { path = "crates/txtx-addon-kit", default-features = false }
txtx-cloud = { path = "crates/txtx-cloud" }
txtx-gql = { path = "crates/txtx-gql" }
txtx-supervisor-ui = { path = "crates/txtx-supervisor-ui" }
txtx-serve = { path = "crates/txtx-serve" }
txtx-addon-network-evm = { path = "addons/evm" }
txtx-addon-network-ovm = { path = "addons/ovm" }
txtx-addon-network-bitcoin = { path = "addons/bitcoin" }
txtx-addon-network-stacks = { path = "addons/stacks" }
txtx-addon-network-svm = { path = "addons/svm/core" }
txtx-addon-telegram = { path = "addons/telegram" }
txtx-addon-sp1 = { path = "addons/sp1" }
uuid = { version = "1.15.1", features = ["v4", "serde", "js"] }

[alias]
build-cli = "build --package txtx-cli --no-default-features --features cli"
