[workspace.package]
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/txtx/txtx"
keywords = ["txtx", "smart-contracts", "devops", "secops", "blockchains"]
categories = ["cryptography"]

[workspace]
members = [
    "crates/txtx-cli",
    "crates/txtx-core",
    "crates/txtx-addon-kit",
    "crates/txtx-cloud",
    "crates/txtx-lsp",
    "crates/txtx-supervisor-ui",
    "crates/txtx-serve",
    "addons/evm",
    "addons/svm/types",
    "addons/svm/core",
]
default-members = ["crates/txtx-cli"]
resolver = "2"

[workspace.dependencies]
crossbeam-channel = "0.5.15"
reqwest = { version = "0.11.27", default-features = false, features = [
    "json",
    "rustls-tls",
]}
txtx-core = { path = "crates/txtx-core", version = "0.4.16", default-features = false }
txtx-addon-kit = { path = "crates/txtx-addon-kit", version = "0.4.13", default-features = false }
txtx-cloud = { path = "crates/txtx-cloud", version = "0.1.14" }
txtx-gql = { path = "crates/txtx-gql", version = "0.3.9" }
txtx-supervisor-ui = { path = "crates/txtx-supervisor-ui", version = "0.2.10" }
txtx-serve = { path = "crates/txtx-serve", version = "0.1.3" }
txtx-addon-network-evm = { path = "addons/evm", version = "0.1.2" }
txtx-addon-network-svm-types = { path = "addons/svm/types", version = "0.3.18" }
txtx-addon-network-svm = { path = "addons/svm/core", version = "0.3.20" }
uuid = { version = "1.15.1", features = ["v4", "serde", "js"] }
