[package]
name = "txtx-addon-network-evm"
description = "Primitives for executing EVM runbooks"
version = "0.1.1"
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
sha2 = "0.10.8"
txtx-addon-kit = { workspace = true, default-features = false }
lazy_static = "1.4.0"
hmac = "0.12.0"
pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
tiny-hderive = { version = "0.3.0" }
libsecp256k1 = { version = "0.7.0" }
serde_json = { version = "1.0.113", features = ["arbitrary_precision"] }
serde = "1"
serde_derive = "1"
async-recursion = "1"
alloy = { version = "0.13", features = ["full", "rlp", "eip712"] }
alloy-provider = { version = "0.13", features = ["debug-api"] }
alloy-rpc-types = { version = "0.13", features = ["trace"] }
alloy-signer-local = { version = "0.13", features = ["mnemonic"] }
thiserror = "1.0.62"
toml = "0.5"
foundry-block-explorers = "0.12.0"
foundry-compilers-artifacts-solc = "0.13.5"
alloy-chains = "0.1.27"
foundry-config = "0.2.0"
semver = "1.0.26"

[features]
default = ["txtx-addon-kit/default"]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
