[package]
name = "txtx-addon-network-evm"
description = "Primitives for executing EVM runbooks"
version = "0.1.2"
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
sha2 = "0.10.8"
txtx-addon-kit = { workspace = true, default-features = false }
lazy_static = "1.4.0"
hmac = "0.12.0"
pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
libsecp256k1 = { version = "0.7.0" }
serde_json = { version = "1.0.113", features = ["arbitrary_precision"] }
serde = "1"
serde_derive = "1"
async-recursion = "1"
alloy = { version = "1.0.41", default-features = false, features = [
  "consensus", 
  "dyn-abi", 
  "json-abi", 
  "network", 
  "rpc", 
  "signers", 
  "rpc-types", 
  "contract", 
  "providers", 
  "rlp", 
  "reqwest-rustls-tls",
  "eip712"
]}
alloy-chains = "0.2.14"
alloy-primitives = { version = "1.4.1" }
alloy-provider = { version = "1.0.41", default-features = false, features = ["debug-api"] }
alloy-rpc-types = { version = "1.0.41", features = ["trace"] }
alloy-signer-local = { version = "1.0.41", features = ["mnemonic"] }
thiserror = "1.0.62"
toml = "0.5"
foundry-block-explorers = "0.22.0"
foundry-compilers-artifacts-solc = "0.19.5"
foundry-compilers = "0.19.5"
foundry-config = { version = "1.4.2", git = "https://github.com/txtx/foundry.git", branch = "txtx-next"}
semver = "1.0.26"

[features]
default = ["txtx-addon-kit/default"]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
