[package]
name = "txtx-addon-network-ovm"
version = "0.1.0"
edition = "2021"

[dependencies]
txtx-addon-kit = { workspace = true, default-features = false}
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"

[features]
default = ["txtx-addon-kit/default"]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
