[package]
name = "txtx-addon-network-solana"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
txtx-addon-kit = { workspace = true, default-features = false}
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"
async-recursion = "1"
bincode = "1.3"

#solana-sdk = "2.0.8"
#solana-sdk = { path = "../../../solana/sdk" }
#solana-sdk = { git = "https://github.com/txtx/solana", branch = "zeroize-fix", subdir = "solana/sdk" }
#solana-client = { git = "https://github.com/txtx/solana", branch = "zeroize-fix", subdir = "solana/client" }
solana-sdk = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/sdk" }
# solana-client = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/client" }

[dev-dependencies]
txtx-test-utils = { path = "../../crates/txtx-test-utils" }

[features]
default = [
  "txtx-addon-kit/default"
]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
