[package]
name = "txtx-addon-sp1"
version = "0.1.0"
edition = "2021"

[dependencies]
txtx-addon-kit = { workspace = true, default-features = false}
lazy_static = "1.4.0"
sp1-sdk = { version = "1.1.1", default-features = false, features = ["network"] }

[features]
default = ["txtx-addon-kit/default"]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
