[package]
name = "txtx-addon-network-stacks"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
txtx-addon-kit = { path = "../../crates/txtx-addon-kit", default-features = false}
lazy_static = "1.4.0"
clarity-repl = { version = "2.0.0", default-features = false }
clarity-vm = { version = "=2.1.1", default-features = false }
clarinet-deployments = { version = "1.0.3", default-features = false }
wasm-bindgen = { version = "=0.2.84", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
hmac = "0.12.0"
pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
tiny-hderive = { version = "0.3.0" }
libsecp256k1 = { version = "0.7.0" }
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"
async-recursion = "1"
toml = "0.5"

[features]
default = ["clarity-repl/sdk", "clarity-vm/default", "clarinet-deployments/default", "txtx-addon-kit/default"]
wasm = [
  "txtx-addon-kit/wasm",
  "wasm-bindgen",
  "clarity-repl/wasm",
  "clarity-vm/wasm",
  "clarinet-deployments/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
