[package]
name = "txtx-addon-network-stacks"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
txtx-addon-kit = { workspace = true, default-features = false }
lazy_static = "1.4.0"
clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "clarity", default-features = false }
clarity-repl = { git = "https://github.com/hirosystems/clarinet.git", tag="v2.8.0", package = "clarity-repl", default-features = false }
clarinet-deployments = { git = "https://github.com/hirosystems/clarinet.git", tag="v2.8.0", package = "clarinet-deployments", default-features = false }
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"
async-recursion = "1"
toml = "0.5"

[dev-dependencies]
txtx-test-utils = { path = "../../crates/txtx-test-utils" }

[features]
default = [
  "clarity/default", 
  "clarity-repl/sdk", 
  "clarinet-deployments/default", 
  "txtx-addon-kit/default"
]
wasm = [
  "txtx-addon-kit/wasm",
  "clarity/wasm",
  "clarity-repl/wasm",
  "clarinet-deployments/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
