[package]
name = "txtx-addon-network-svm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
txtx-addon-kit = { workspace = true, default-features = false }
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"
async-recursion = "1"
bincode = "1.3"
solana-sdk = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "solana/sdk" }
spl-token = "=6.0.0"
spl-associated-token-account = "=4.0.0"
solana-client = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "solana/client", default-features = false }
anchor-lang-idl = "0.1.1"
solana_idl = "0.2.0"
borsh = "1.5.1"
tiny-bip39 = "0.8.2"

[dev-dependencies]
txtx-test-utils = { path = "../../crates/txtx-test-utils" }

[features]
default = [
  "txtx-addon-kit/default"
]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
