[package]
name = "txtx-addon-network-svm"
description = "Primitives for executing Solana runbooks"
version = "0.1.5"
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# txtx-addon-kit = { version = "0.2.2", default-features = false }
txtx-addon-kit = { workspace = true, default-features = false }
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = "1"
serde_derive = "1"
async-recursion = "1"
bincode = "1.3"
solana-sdk = "2.1.10"
solana-client = "2.1.10"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
anchor-lang-idl = { version = "0.1.1", features = ["convert"] }
solana_idl = "0.2.0"
borsh = "1.5.1"
tiny-bip39 = "0.8.2"

[dev-dependencies]
txtx-test-utils = { path = "../../crates/txtx-test-utils" }

[features]
default = [
  "txtx-addon-kit/default"
]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
