[package]
name = "txtx-addon-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
txtx-addon-kit = { workspace = true, default-features = false }
lazy_static = "1.4.0"
teloxide = "0.13.0"

[features]
default = ["txtx-addon-kit/default"]
wasm = [
  "txtx-addon-kit/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
