[package]
name = "txtx-addon-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-edit = "0.8.0"
serde = "1"
serde_derive = "1"
jaq-interpret = "1.2.1"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
rust-fsm = "0.6.2"
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "rustls-tls",
]}
tokio = { version = "1.37.0", default-features = false, optional = true}
lazy_static = "1.4.0"
indoc = "2.0.5"
hiro-system-kit = "0.3.4"
crossbeam-channel = "0.5.8"

[dev-dependencies]
serde_json = "1"
test-case = "*"

[features]
default=["tokio/rt", "tokio/time", "tokio/net"]
wasm = ["tokio/rt"]

[lib]
crate-type = ["lib", "cdylib"] 