[package]
name = "txtx-addon-network-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
# strum = "0.25.0"
# strum_macros = "0.25.3"
txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}

[features]
default = ["txtx-addon-kit/default"]
wasm = ["txtx-addon-kit/wasm"]

[lib]
crate-type = ["lib", "cdylib"] 