[package]
name = "txtx-addon-network-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
lazy_static = "1.4.0"
wasm-bindgen = { version = "=0.2.84", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
hmac = "0.12.0"
pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
tiny-hderive = { version = "0.3.0" }
libsecp256k1 = { version = "0.7.0" }
serde_json = "1.0.113"

[features]
default = ["txtx-addon-kit/default"]
wasm = [
  "txtx-addon-kit/wasm",
  "wasm-bindgen"
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
