[package]
name = "txtx-addon-network-stacks"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
txtx-addon-kit = { path = "../txtx-addon-kit" }
lazy_static = "1.4.0"
# chainhook-types = "1.3.3"
# clarinet-files = { version = "2.0.1" }
clarinet-deployments = { version = "1.0.3", default-features = false, features = ["wasm"]}
clarity-repl = { version = "1.8.0", default-features = false, features = ["wasm"]}
# clarinet-deployments = { path = "../../../clarinet/components/clarinet-deployments" }

[features]
wasm = ["txtx-addon-kit/wasm"]

[lib]
crate-type = ["lib", "cdylib"] 