[package]
name = "txtx-addon-network-stacks"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
txtx-addon-kit = { path = "../txtx-addon-kit" }
lazy_static = "1.4.0"
clarity = { version = "2", default-features = false, optional = true, git = "https://github.com/lgalabru/stacks-core.git", rev = "f9c5d78717b3155d8245941514742e7928bd16fa", package = "clarity" }
wasm-bindgen = { version = "=0.2.84", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = ["wasm"]
wasm = [
  "txtx-addon-kit/wasm",
  "wasm-bindgen",
  "clarity/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
