[package]
name = "txtx-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "txtx"
path = "src/main.rs"

[dependencies]
txtx-core = { path = "../txtx-core" }
txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks" }
txtx-gql = { path = "../txtx-gql" }
hiro-system-kit = "0.3.1"
clap = { version = "4.4.6", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
toml = { version = "0.8.2", features = ["preserve_order"], optional = true }
ctrlc = { version = "3.2.2", optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
crossterm = "0.27.0"
ratatui = { version = "0.26.0-alpha.2", features = ["crossterm"] }
itertools = "0.12.0"
unicode-width = "0.1"
rust-embed="8.2.0"
juniper_rocket = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
rocket = { version = "0.5.0", features = ["json"] }

[features]
default = ["cli"]
cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro-system-kit/log"]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]
