[package]
name = "txtx-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "txtx"
path = "src/main.rs"

[dependencies]
txtx-core = { path = "../txtx-core" }
txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks" }
txtx-gql = { path = "../txtx-gql" }
hiro-system-kit = "0.3.1"
clap = { version = "4.4.6", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
toml = { version = "0.8.2", features = ["preserve_order"], optional = true }
ctrlc = { version = "3.2.2", optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
crossterm = "0.27.0"
ratatui = { version = "0.26.0-alpha.2", features = ["crossterm"] }
itertools = "0.12.0"
unicode-width = "0.1"
rust-embed="8.2.0"
juniper_actix = {version = "0.5.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
actix-web = "4"
actix-cors = "0.7.0"
ansi_term = "0.12.1"
atty = "0.2.14"
mustache = "0.9.0"
tokio = "1.37.0"
mime_guess = "2.0.4"
serde_yml = "0.0.10"
dotenvy_macro = "0.15.7"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
native-tls = "0.2.11"
totp-rs = "^5.0"
base58 = "0.2.0"
dialoguer = "0.11.0"
console = "0.15.8"
convert_case = "0.6.0"
rusqlite = "0.27.0"

[features]
default = ["cli"]
cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro-system-kit/log"]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]

[build-dependencies]
npm_rs="1.0.0"

[dev-dependencies]
test-case = "*"