[package]
name = "txtx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
daggy = "0.8.0"
base64 = "0.22.1"
txtx-addon-kit = { path = "../txtx-addon-kit", default-features = false}
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
jaq-interpret = "1.2.1"
jaq-parse = "1.0.2"
serde_json = "1.0.113"
libsecp256k1 = "0.7.0"
indexmap = "2.2.6"
petgraph = "0.6.5"
ripemd = "0.1.3"
serde = "1"
serde_derive = "1"
serde_yml = "0.0.10"
chrono = "0.4.38"
similar = "2.5.0"

[dev-dependencies]
txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
hiro-system-kit = "0.3.4"

[features]
default = ["txtx-addon-kit/default"]
wasm = ["txtx-addon-kit/wasm"]

[lib]
crate-type = ["lib", "cdylib"] 