[package]
name = "txtx-ext-ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
txtx-ext-kit = { path = "../txtx-ext-kit" }
alloy-primitives = "0.6.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
wasm = ["txtx-ext-kit/wasm"]

[lib]
crate-type = ["lib", "cdylib"] 