[package]
name = "txtx-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
txtx-vm = { path = "../txtx-vm" }
futures = { version = "0.3.22", features = ["alloc"], default-features = false }
futures-enum = { version = "0.1.12", default-features = false }
uuid = { version = "1.6.1", features = ["serde", "v7"] }
# c0e1b3e -> 0.16.0-dev
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
