[package]
name = "txtx-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
txtx-core = { path = "../txtx-core" }
futures = { version = "0.3.22", features = ["alloc"], default-features = false }
futures-enum = { version = "0.1.12", default-features = false }
uuid = { version = "1.6.1", features = ["serde", "v7"] }
juniper = { version = "0.16.1" }
juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
serde = "1.0.196"
serde_derive = "1"
serde_json = "1.0.113"
async-stream = "0.3.5"
tokio = "1.37.0"