[package]
name = "txtx-addon-kit"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-edit = "0.8.0"
serde = "1"
serde_derive = "1"
jaq-interpret = "1.2.1"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
]}
lazy_static = "1.4.0"
indoc = "2.0.5"
crossbeam-channel = "0.5.8"
futures = "0.3"
highway = "1.1.0"
rand = "0.8.5"
serde_json = "1"
sha2 = "0.10.8"
indexmap = { version = "2.2.6", features = ["serde"] } 
dotenvy_macro = "0.15.7"
wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }

[dev-dependencies]
test-case = "*"
hiro-system-kit = "0.3.4"

[features]
default=[]
wasm = ["wasm-bindgen", "wasm-bindgen-futures"]

[lib]
crate-type = ["lib", "cdylib"]
