[package]
name = "txtx-addon-kit"
description = "Low level primitives for building addons for Txtx"
version = "0.4.10"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-edit = "0.8.0"
serde = "1"
serde_derive = "1"
jaq-interpret = "1.2.1"
url = { version = "2.2.2", features = ["serde"] }
uuid = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
reqwest = { workspace = true }
lazy_static = "1.4.0"
indoc = "2.0.5"
crossbeam-channel = { workspace = true }
futures = "0.3"
highway = "1.1.0"
rand = "0.8.5"
serde_json = "1"
sha2 = "0.10.8"
indexmap = { version = "2.2.6", features = ["serde"] } 
wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
hmac = "0.12.0"
pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
tiny-hderive = { version = "0.3.0" }
libsecp256k1 = { version = "0.7.0" }
keccak-hash = "0.11.0"
dirs = "5.0.1"
dyn-clone = "1"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
test-case = "3.3"
hiro-system-kit = "0.3.4"

[features]
default=[]
wasm = ["wasm-bindgen", "wasm-bindgen-futures"]

[lib]
crate-type = ["lib", "cdylib"]
