[package]
name = "txtx-addon-kit"
description = "Low level primitives for building addons for Txtx"
version = "0.4.13"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = {version = "0.5.3", features = ["alloc"] }
ed25519-dalek-bip32 = "0.3.0"
hcl-edit = "0.8.0"
serde = "1"
serde_derive = "1"
jaq-interpret = "1.2.1"
url = { version = "2.2.2", features = ["serde"] }
uuid = { workspace = true }
hex = "0.4.3"
reqwest = { workspace = true }
lazy_static = "1.4.0"
indoc = "2.0.5"
crossbeam-channel = { workspace = true }
futures = "0.3"
highway = "1.1.0"
rand = "0.8.5"
serde_json = "1"
sha2 = "0.10.8"
indexmap = { version = "2.2.6", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
hmac = "0.12.0"
pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
libsecp256k1 = { version = "0.7.0" }
keccak-hash = "0.11.0"
dirs = "5.0.1"
dyn-clone = "1"

[dev-dependencies]
test-case = "3.3"
hiro-system-kit = "0.3.4"

[features]
default=[]
wasm = []

[lib]
crate-type = ["lib", "cdylib"]
